@@ -44,7 +44,7 @@ public class ParallelMax {
         for (int i = low; i < high; i++)
           if (list[i] > max)
             max = list[i];
-        return new Integer(max);
+        return Integer.valueOf(max);
       } 
       else {
         int mid = (low + high) / 2;
@@ -53,7 +53,7 @@ public class ParallelMax {
 
         right.fork();
         left.fork(); 
-        return new Integer(Math.max(left.join().intValue(), 
+        return Integer.valueOf(Math.max(left.join().intValue(),
           right.join().intValue()));
       }
     }
